+ interfaces DataRecord2JmsMsg and JmsMsg2DataRecord now have 2 new methods: setGraph(TransformationGraph) and getGraph()
+ context(thread) class-loader changed to current(class) class-loader
+ new run option: -skipcheckconfig
+ optimized UniversalDataReader
+ Trash now can print out its ID for debugging purposes
+ unified null and empty field values in sorting, Dedup, etc. 

REL 2-7-2
---------
Features:
+ simplified JMSWriter - method DataRecord2JmsMsg.createMsg(r) is called for all records (event for last record) and DataRecord2JmsMsg.createLastMsg(r) is called just once after last record.
+ DBOutputTable converts to string all values with unknown data type 

Fixed:
+ ExtSort does not sort correctly with Null values in key
+ SimpleCache used in DBJoin caches many records with same key in a wrong way
+ JMSReader/Writer: attributes processorCode and processorURL are ignored
+ DBExecute - if input port with parameters is connected but no record come, procedure should not execute
+ classpath resolving problems in RunGraph component
+ input file is not closed when graph fails (http://forum.cloveretl.org/viewtopic.php?f=4&t=810&sid=57ac7cf7f854d09b590535717dc0efb6)

REL 2-7-1
---------
Features:
+ added CTL functions: bit_and bit_or, bit_xor
+ StringAproxComparatorLocaleRules for more languages
+ Clover-to-SQL conversions have been revised for all supported dbms, some data types changed 
+ performace improvement in HashJoin 

Fixed:
+ multiple XPathReaders in one graph with different namespaces
+ writing data to port doesn't use unnecessary threads
+ updated our built-in mysql driver to version 5.1.17
+ DBExecute - NPE when executing stored procedure in Oracle, which have output parameter as not the first paramete
+ when query in DBInputTable finishes with ;<new line> strange error is thrown
+ OracleDataWriter leaves junk after execution
+ randomSeed doesn't work in DataGenerator
+ edit_distance function with strength 2
+ ExtSort with a locale
+ other fixes

 